initial/src/main/bkool/parser/BKOOL.g4
grammar BKOOL;

@lexer::header {
from lexererr import *
}

options {
	language=Python3;
}
// Use ANTLR to write regular expressions describing 
// Pascal strings are made up of a sequence of characters between single quotes: 'string'. 
// The single quote itself can appear as two single quotes back to back in a string: 'isn''t'.


program:  EOF;

IDENTIFIER: [a-z] [a-z0-9]*;

bkNetID: t=ten '.' h=ho ct=chuoiTuChon;

ten: LETTER+;
ho: LETTER+;
chuoiTuChon: (LETTER | DIGIT | '.' | '_')* '.'?;

fragment LETTER: [a-z];
fragment DIGIT: [0-9];

WS : [ \t\r\n]+ -> skip ; // skip spaces, tabs, newlines

ERROR_CHAR: . {raise ErrorToken(self.text)};
UNCLOSE_STRING: .;
ILLEGAL_ESCAPE: .;
